fix user domain
